Final update for inventory pages

--- a/Inventory/drink.html
+++ b/Inventory/drink.html
@@ -13,40 +13,40 @@
     </div>
 
     <div class="container">
-        <a href="http://www.google.com" target="_blank"> <img src="images/wine.jpg" alt="Avatar" class="image" style="width:100%"></a>
+        <a href="notes/drink - wine.html" target="_blank"> <img src="images/wine.jpg" alt="Avatar" class="image" style="width:100%"></a>
         <div class="middle">
             <div class="text">Wine</div>
         </div>
     </div>
 
     <div class="container2">
-        <a href="http://www.google.com" target="_blank"> <img src="images/beer.jpg" alt="Avatar" class="image" style="width:100%"></a>
+        <a href="notes/drink - beer.html" target="_blank"> <img src="images/beer.jpg" alt="Avatar" class="image" style="width:100%"></a>
         <div class="middle">
             <div class="text">Beer</div>
         </div>
     </div>
 
     <div class="container3">
-        <a href="http://www.google.com" target="_blank"> <img src="images/spirits.jpg" alt="Avatar" class="image" style="width:100%"></a>
+        <a href="notes/drink - spirits.html" target="_blank"> <img src="images/spirits.jpg" alt="Avatar" class="image" style="width:100%"></a>
         <div class="middle">
             <div class="text">Spirits
             </div>
         </div>
     </div>
     <div class="container4">
-        <a href="http://www.google.com" target="_blank"> <img src="images/soda.jpg" alt="Avatar" class="image" style="width:100%"></a>
+        <a href="notes/drink - soda.html" target="_blank"> <img src="images/soda.jpg" alt="Avatar" class="image" style="width:100%"></a>
         <div class="middle">
             <div class="text">Soda</div>
         </div>
     </div>
     <div class="container5">
-        <a href="http://www.google.com" target="_blank"> <img src="images/milkshake.png" alt="Avatar" class="image" style="width:100%"></a>
+        <a href="notes/drink - milkshakes.html" target="_blank"> <img src="images/milkshake.png" alt="Avatar" class="image" style="width:100%"></a>
         <div class="middle">
             <div class="text">Milkshake</div>
         </div>
     </div>
     <div class="container6">
-        <a href="http://www.google.com" target="_blank"> <img src="images/coff.jpg" alt="Avatar" class="image" style="width:100%"></a>
+        <a href="notes/drink - hot drinks.html" target="_blank"> <img src="images/coff.jpg" alt="Avatar" class="image" style="width:100%"></a>
         <div class="middle">
             <div class="text">Hot drinks</div>
         </div>
