--- a/Inventory/equipment.html
+++ b/Inventory/equipment.html
@@ -13,40 +13,40 @@
     </div>
 
     <div class="container">
-        <a href="http://www.google.com" target="_blank"> <img src="images/kitchen.jpg" alt="Avatar" class="image" style="width:100%"></a>
+        <a href="notes/equipment - kitchen.html" target="_blank"> <img src="images/kitchen.jpg" alt="Avatar" class="image" style="width:100%"></a>
         <div class="middle">
             <div class="text">Kitchen</div>
         </div>
     </div>
 
     <div class="container2">
-        <a href="http://www.google.com" target="_blank"> <img src="images/storage.jpg" alt="Avatar" class="image" style="width:100%"></a>
+        <a href="notes/equipment - storage.html" target="_blank"> <img src="images/office.jpg" alt="Avatar" class="image" style="width:100%"></a>
         <div class="middle">
-            <div class="text">Storage</div>
+            <div class="text">Office</div>
         </div>
     </div>
 
     <div class="container3">
-        <a href="http://www.google.com" target="_blank"> <img src="images/maint.jpg" alt="Avatar" class="image" style="width:100%"></a>
+        <a href="notes/equipment - maintenace.html" target="_blank"> <img src="images/maint.jpg" alt="Avatar" class="image" style="width:100%"></a>
         <div class="middle">
             <div class="text">Maintenance
             </div>
         </div>
     </div>
     <div class="container4">
-        <a href="http://www.google.com" target="_blank"> <img src="images/bathroom.jpg" alt="Avatar" class="image" style="width:100%"></a>
+        <a href="notes/equipment - bathroom.html" target="_blank"> <img src="images/bathroom.jpg" alt="Avatar" class="image" style="width:100%"></a>
         <div class="middle">
             <div class="text">Bathroom</div>
         </div>
     </div>
     <div class="container5">
-        <a href="http://www.google.com" target="_blank"> <img src="images/plates.jpg" alt="Avatar" class="image" style="width:100%"></a>
+        <a href="notes/equipment - dining.html" target="_blank"> <img src="images/plates.jpg" alt="Avatar" class="image" style="width:100%"></a>
         <div class="middle">
             <div class="text">Dining</div>
         </div>
     </div>
     <div class="container6">
-        <a href="http://www.google.com" target="_blank"> <img src="images/tech.jpg" alt="Avatar" class="image" style="width:100%"></a>
+        <a href="notes/equipment - tech.html" target="_blank"> <img src="images/tech.jpg" alt="Avatar" class="image" style="width:100%"></a>
         <div class="middle">
             <div class="text">Technical</div>
         </div>
