--- a/Inventory/main.html
+++ b/Inventory/main.html
@@ -34,9 +34,33 @@
         </div>
     </div>
 
-    <a href="main.html"> <button class="button2">Notes</button> </a>
-    <a href="main.html"> <button class="button2">Edit Categories</button> </a>
+    <a href="notepage.html"> <button class="button2">Notepad</button> </a>
+    <button class="button2" id="myBtn">Edit categories</button>
+    <div id="myModal" class="modal">
+        <div class="modal-content">
+            <span class="close">&times;</span>
+            <p>A window like this would appear and let the user choose if they want to update/delete or edit a category</p>
+        </div>
 
+    </div>
+    <script>
+        var modal = document.getElementById("myModal");
+        var btn = document.getElementById("myBtn");
+
+        var span = document.getElementsByClassName("close")[0];
+
+        btn.onclick = function() {
+            modal.style.display = "block";
+        }
+        span.onclick = function() {
+            modal.style.display = "none";
+        }
+        window.onclick = function(event) {
+            if (event.target == modal) {
+                modal.style.display = "none";
+            }
+        }
+    </script>
 </body>
 
 </html>
