--- a/Inventory/notes/drink - beer.html
+++ b/Inventory/notes/drink - beer.html
@@ -10,7 +10,7 @@
 <body>
     <div class="loginbox">
         <img src="../images/person.png" class="person">
-        <h1>View notes and storage status for vegetables</h1>
+        <h1>View notes and storage status for beer</h1>
         <form>
             <p> Notepad:</p>
     </div>
@@ -33,31 +33,31 @@
         <tbody>
             <tr>
                 <td>1</td>
-                <td>Potatoes</td>
+                <td>Ale</td>
                 <td>40</td>
                 <td>09-11-2020</td>
             </tr>
             <tr>
                 <td>2</td>
-                <td>Carrots</td>
+                <td>Witbier</td>
                 <td>25</td>
                 <td>09-11-2020</td>
             </tr>
             <tr>
                 <td>3</td>
-                <td>Cucumber</td>
+                <td>Indian Pale Ale</td>
                 <td>33</td>
                 <td>09-11-2020</td>
             </tr>
             <tr>
                 <td>4</td>
-                <td>Lettuce</td>
+                <td>Lager</td>
                 <td>22</td>
                 <td>09-11-2020</td>
             </tr>
             <tr>
                 <td>5</td>
-                <td>Onion</td>
+                <td>Stout</td>
                 <td>26</td>
                 <td>09-11-2020</td>
             </tr>
@@ -65,8 +65,7 @@
     </table>
     </div>
 
-
-    <a href="../food.html"> <button class="button3">Go back</button> </a>
+    <a href="../drink.html"> <button class="button3">Go back</button> </a>
     <button class="button3" id="myBtn">Edit categories</button>
     <div id="myModal" class="modal">
         <div class="modal-content">
@@ -94,5 +93,6 @@
         }
     </script>
 
+</body>
 
 </html>
