--- a/Inventory/notes/equipment - tech.html
+++ b/Inventory/notes/equipment - tech.html
@@ -10,7 +10,7 @@
 <body>
     <div class="loginbox">
         <img src="../images/person.png" class="person">
-        <h1>View notes and storage status for vegetables</h1>
+        <h1>View notes and storage status for tech supplies</h1>
         <form>
             <p> Notepad:</p>
     </div>
@@ -33,32 +33,32 @@
         <tbody>
             <tr>
                 <td>1</td>
-                <td>Potatoes</td>
-                <td>40</td>
+                <td>Ethernet cables</td>
+                <td>20</td>
                 <td>09-11-2020</td>
             </tr>
             <tr>
                 <td>2</td>
-                <td>Carrots</td>
-                <td>25</td>
+                <td>iPads</td>
+                <td>10</td>
                 <td>09-11-2020</td>
             </tr>
             <tr>
                 <td>3</td>
-                <td>Cucumber</td>
-                <td>33</td>
+                <td>Laptops</td>
+                <td>10</td>
                 <td>09-11-2020</td>
             </tr>
             <tr>
                 <td>4</td>
-                <td>Lettuce</td>
-                <td>22</td>
+                <td>Desktops</td>
+                <td>3</td>
                 <td>09-11-2020</td>
             </tr>
             <tr>
                 <td>5</td>
-                <td>Onion</td>
-                <td>26</td>
+                <td>Monitors</td>
+                <td>5</td>
                 <td>09-11-2020</td>
             </tr>
         </tbody>
@@ -66,7 +66,7 @@
     </div>
 
 
-    <a href="../food.html"> <button class="button3">Go back</button> </a>
+    <a href="../equipment.html"> <button class="button3">Go back</button> </a>
     <button class="button3" id="myBtn">Edit categories</button>
     <div id="myModal" class="modal">
         <div class="modal-content">
@@ -94,5 +94,6 @@
         }
     </script>
 
+</body>
 
 </html>
