--- a/Inventory/notes/food - oils.html
+++ b/Inventory/notes/food - oils.html
@@ -67,7 +67,32 @@
 
 
     <a href="../food.html"> <button class="button3">Go back</button> </a>
-    <button class="button3">Edit categories</button>
+    <button class="button3" id="myBtn">Edit categories</button>
+    <div id="myModal" class="modal">
+        <div class="modal-content">
+            <span class="close">&times;</span>
+            <p>A window like this would appear and let the user choose if they want to update/delete or edit a category</p>
+        </div>
+
+    </div>
+    <script>
+        var modal = document.getElementById("myModal");
+        var btn = document.getElementById("myBtn");
+
+        var span = document.getElementsByClassName("close")[0];
+
+        btn.onclick = function() {
+            modal.style.display = "block";
+        }
+        span.onclick = function() {
+            modal.style.display = "none";
+        }
+        window.onclick = function(event) {
+            if (event.target == modal) {
+                modal.style.display = "none";
+            }
+        }
+    </script>
 
 </body>
 
