fixed back button

--- a/Inventory/equipment.html
+++ b/Inventory/equipment.html
@@ -51,7 +51,8 @@
             <div class="text">Technical</div>
         </div>
     </div>
-    <button class="button2">Go back</button>
+    <a href="main.html"> <button class="button2">Go back</button> </a>
+
 
 
 </body>
